# this is a port of the recent 1.19.2 changes to 1.19.3
- ported the 1.12.4 update stuff
- ported the 1.12.5 update stuff

- re-added patchouli support as it's now on 1.19.3

Disclaimer: Ad Astra will be releasing a large 1.20 update in the future that will break with this current 1.19.3 version. Use at your own risk!