@@ -1,2 +1,2 @@
-// 1.19.2	2023-03-10T12:32:38.14614	Languages: en_us
+// 1.19.3	2023-03-14T20:53:44.91879	Languages: en_us
 2b37abfb8a349fc3632bcd4040c0b35f57efd9ce assets/ad_astra/lang/en_us.json
